tests/ui/const-generics/mgca/tuple_ctor_complex_args.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/tuple_ctor_complex_args.rs:12:26
   |
LL |     with_point::<{ Point(N + 1, N) }>();
   |                          ^^^^^

error: generic parameters may not be used in const operations
  --> $DIR/tuple_ctor_complex_args.rs:15:34
   |
LL |     with_point::<{ Point(const { N + 1 }, N) }>();
   |                                  ^
   |
   = help: add `#![feature(opaque_generic_const_args)]` to allow generic expressions as the RHS of const items

error: aborting due to 2 previous errors

